# driver-risk-prediction-platform

./: .gitignore  README.md
ai-engine/: .env.example  pyproject.toml
ai-engine/src/: main.py  schemas.py
ai-engine/src/api/: admin.py  explain.py  upload.py
ai-engine/src/config/: ensemble_config.py
ai-engine/src/core/: analysis_cache.py  constants.py  database.py  shap_cache.py
ai-engine/src/data/: db_loader.py  features.py  labeler.py  loader.py  preprocessor.py  transform.py  utils.py
ai-engine/src/inference/: fast_lookup.py  feature_construction.py  loader.py  seq_engine.py  stack_engine.py
ai-engine/src/models/: calibration.py  ensemble.py  factory.py  metrics.py
ai-engine/src/services/: prediction_service.py  shap_service.py  training_service.py
ai-engine/src/training/: seq_trainer.py  stack_trainer.py
ai-engine/src/utils/: age_calc.py  optimization_utils.py
backend/: pom.xml
backend/src/main/java/egovframework/: EgovBootApplication.java
backend/src/main/java/egovframework/com/config/: EgovConfigApp.java  EgovConfigAppCommon.java  EgovConfigAppDatasource.java  EgovConfigWebDispatcherServlet.java  OpenApiConfig.java
backend/src/main/java/egovframework/com/security/: SecurityConfig.java
backend/src/main/java/egovframework/let/risk/web/: AnalysisController.java
backend/src/main/resources/: application-prod.properties  application.properties  log4j2-spring.xml
backend/src/main/resources/db/: risk.sql
deploy/: INSTALL.md
